# primer

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: config.rs  main.rs
